[gd_scene load_steps=8 format=3 uid="uid://blx0kj8gah080"]

[ext_resource type="Script" path="res://Scripts/UI/Lobby/battle_setup.gd" id="1_dfdeh"]
[ext_resource type="StyleBox" uid="uid://c2e7veyqebiaa" path="res://Art/UI/background_frames/pale_green.tres" id="2_1dtuq"]
[ext_resource type="StyleBox" uid="uid://c4pw3ug8ebg0e" path="res://Art/UI/background_frames/dark.tres" id="2_c6lvt"]
[ext_resource type="PackedScene" uid="uid://8gkshp6dgl0f" path="res://Scenes/UI/LevelUp/LevelUpLobbyScreen.tscn" id="2_sstiq"]
[ext_resource type="PackedScene" uid="uid://j6n24hs0xavf" path="res://Scenes/UI/Lobby/BattlePlayerSlotPanel.tscn" id="2_vpapl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jgcdk"]
resource_local_to_scene = true
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e6gkv"]
resource_local_to_scene = true
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(1, 1, 1, 1)

[node name="BattleSetup" type="MarginContainer"]
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_top = 0
theme_override_constants/margin_bottom = 0
script = ExtResource("1_dfdeh")

[node name="VBoxLevelUp" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="LevelUpLobbyScreen" parent="VBoxLevelUp" instance=ExtResource("2_sstiq")]
layout_mode = 2

[node name="LevelUpConfirmButton" type="Button" parent="VBoxLevelUp"]
layout_mode = 2
text = "Confirm"

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PresetSelect" type="VBoxContainer" parent="VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/PresetSelect"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Select a preset"

[node name="ColorRect" type="PanelContainer" parent="VBox/PresetSelect"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("2_1dtuq")

[node name="PresetList" type="OptionButton" parent="VBox/PresetSelect/ColorRect"]
layout_mode = 2

[node name="MapSelect" type="VBoxContainer" parent="VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/MapSelect"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Select a map"

[node name="ColorRect" type="PanelContainer" parent="VBox/MapSelect"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("2_1dtuq")

[node name="MapList" type="OptionButton" parent="VBox/MapSelect/ColorRect"]
layout_mode = 2

[node name="Slots" type="VBoxContainer" parent="VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/Slots"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Players"

[node name="ColorRect" type="PanelContainer" parent="VBox/Slots"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("2_c6lvt")

[node name="PlayerList" type="VBoxContainer" parent="VBox/Slots/ColorRect"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="BattlePlayerSlotPanel" parent="VBox/Slots/ColorRect/PlayerList" instance=ExtResource("2_vpapl")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jgcdk")

[node name="BattlePlayerSlotPanel2" parent="VBox/Slots/ColorRect/PlayerList" instance=ExtResource("2_vpapl")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_e6gkv")

[connection signal="pressed" from="VBoxLevelUp/LevelUpConfirmButton" to="." method="_on_level_up_confirm_button_pressed"]
[connection signal="item_selected" from="VBox/PresetSelect/ColorRect/PresetList" to="." method="_on_preset_list_item_selected"]
[connection signal="item_selected" from="VBox/MapSelect/ColorRect/MapList" to="." method="_on_map_list_item_selected"]
